Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123442

Changing ExtendedSceneEnvironment texture properties at runtime doesn't change the used texture

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.2, 6.8.0 FF
    • 6.5, 6.6
    • Quick: 3D
    • None
    • 0acfb26ac (dev), a09304101 (dev), c6e09fb7c (6.7), 79dbc1a55 (6.7)

    Description

      If ExtendedSceneEnvironment texture properties are assigned different texture at runtime, the effect doesn't visibly change.

      For example, see attached application which ties different lutTexture to different state.

      The texture used will be whatever is set to the state shown at startup of the application and changing the state at runtime doesn't visibly affect the view.

      The example is about lutTexture but the assumption is that all textures in ExtendedSceneEnvironment behave similarly.

      This makes using ExtendedSceneEnvironment in Qt Design Studio awkward, as you need to  manually reset the puppet after texture change to see the new texture in use. The state previews won't ever render properly even with reset, though.

      This also makes using full scene environment in 3D edit view in QDS difficult if texture property values cannot be meaningfully changed at runtime.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-123442
          # Subject Branch Project Status CR V

          Activity

            People

              stromme Christian
              e0348803 Miikka Heikkinen
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes