Reset property and texture lists on full rebuild of an effect

By not clearing the lists we will, in best case, cause them to
continuously grow. Note that we already fixed this in the custom material.

Pick-to: 6.6
Task-number: QTBUG-123442
Change-Id: If01230b91c3684f3de9e2acb7585cf8800fda89d
Reviewed-by: Inho Lee <inho.lee@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit 0acfb26ac5408f613be600d3801c59ca2af97f7b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>